--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <h1>Tập làm với Git haha</h1>
 
-<h1>Học Git hôm nay nè</h1>
+<h1>Học Git hôm nay nè và đến phần conflict</h1>
 
 <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam a nobis, perferendis sequi, cupiditate dicta quibusdam eligendi doloremque natus dolorum repellat neque dolor repellendus, magni ipsa odit rem quaerat similique.</h1>
+
 
